Version 0.63.3 (2025-09-08):

 * Add option to change bitmap visualisation image background to a
   chosen colour (#258).

 * Copy and save full-size image with alpha channel from bitmap
   visualisation instead of the preview image.

 * Add light icons for use with dark themes to bitmap visualisation and
   histogram views (#262).

 * Add search history to text search dialog (#260).

 * Work around crash with large bitmap previews on Linux (#263).

 * Improve performance of bitmap visualisation.

 * Added missing MOS6502 and Motorola 6800/68k disassembly support for
   x86 Windows (#264).

 * Added RISC-V and WASM disassembly support (where supported by host
   Capstone library).

 * Implement tool panel detaching/docking under Wayland (#252).

 * Update detached tool window title when tab is changed.

Version 0.63.2 (2025-07-13):

 * Add missing file required for binary template support.

Version 0.63.1 (2025-07-13):

 * Improve performance of templates that declare large numbers of file
   variables.

 * Fix selecting the byte range encapsulated by a comment (#255).

 * Add "Jump to end" command to comments panel context menu (#254).

 * Improve rendering performance and UI responsiveness, particularly
   when a large number of colours are in use (#257).

 * Fix searching within a range.

 * Default to selection when a range is selected prior to opening
   search dialog (#256).

Version 0.63.0 (2025-06-11):

 * Add non-modal "Jump to offset" dialog option (#242).

 * Add "Repeat last 'Jump to offset'" command (#242).

 * Add "Visual Scrollbar" for high-level overview of file contents.

 * Add "Data visualisation" tool for overfiew of file/selection
   contents (#230).

 * Add metadata import/export commands (#248).

 * Fix crash when <charset = "US-ASCII"> is specified for a file variable
   in a template (#246).

 * Add highlight functions to scripting API and template language (#247).

 * Fix memory leaks in bitmap preview tool and metadata serialisation.
